ghc-4335c07/testsuite/tests/parser/should_fail/T3095.hs
{-# LANGUAGE KindSignatures #-}
-- Trac #3095
module T3095 where

class Bla (forall x . x :: *) where
